Fix issues with the horizontal scroll bar and broken layout in some cases in edit mode

--- a/css/style.scss
+++ b/css/style.scss
@@ -372,6 +372,7 @@ body > div,
 	@media (max-width: $content-width + 100px) {
 		width: auto;
 		max-width: 100vw;
+		margin: initial;
 		padding-left: 1rem;
 		padding-right: 1rem;
 	}
